# aoc2024

./: aoc.sh  dune-project
lib/: aoc2024.ml
