(lang dune 3.16)

(name aoc2024)

(generate_opam_files false)

(source
 (github teyalem/aoc2024))

(authors "Hyeonung Baek")

(maintainers "Hyeonung Baek")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name aoc2024)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
